--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+
 @import 'tailwindcss';
 
 @theme {
@@ -8,6 +10,15 @@
   --color-bao-2: #fdd0a4;
   --color-bao-3: #dab991;
   --color-bao-border: #091a28;
+}
+
+:root {
+  --font-family-title: "Ubuntu", sans-serif;
+  --font-family-body: "Source Sans 3", sans-serif;
+}
+
+.nav.active {
+  font-weight: bold;
 }
 
 .spinner {
